# rs-crud-api-tmpl

./: .gitignore  Cargo.toml  Makefile  README.md
backend/passenger_service/: Cargo.toml
backend/passenger_service/sql/: 00-recreate-db.sql  01-create-schema.sql  03-dev-seed.sql
backend/passenger_service/src/: main.rs
backend/passenger_service/src/_tests/: model_db.rs  model_passenger.rs  web_handlers.rs  web_passenger.rs
backend/passenger_service/src/model/: db.rs  mod.rs  passenger.rs
backend/passenger_service/src/security/: mod.rs
backend/passenger_service/src/web/: filter_auth.rs  filter_utils.rs  handlers.rs  mod.rs
backend/sql_builder/: Cargo.toml
backend/sql_builder/src/: lib.rs
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: api.ts  main.ts
frontend/src/model/: passenger-mco.ts
frontend/src/ui/: passenger-mvc.ts
frontend/web/: index.html
frontend/web/css/: main.css
frontend/web/js/: app-bundle.js  app-bundle.js.map
